--- a/nbconvert/preprocessors/tests/files/widget-hello-world.ipynb
+++ b/nbconvert/preprocessors/tests/files/widget-hello-world.ipynb
@@ -8,12 +8,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e3465e5050d486aa7fd4d8de9b78ae9",
+       "model_id": "a72770a4f541425f8fe85833a3dc2a8e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Label(value='Hello World')"
+       "Label(value=u'Hello World')"
       ]
      },
      "metadata": {},
@@ -24,56 +24,30 @@
     "import ipywidgets\n",
     "ipywidgets.Label('Hello World')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0f552c064be4b89b196baca1960a43d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x08\\x06\\x00\\x00\\x00\\x1f\\x15\\…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import base64\n",
-    "image_data = base64.b64decode('iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==')\n",
-    "ipywidgets.Image(value=image_data)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "11098546fcf14a4d94f5ddd297b3c1be": {
+     "8273e8fe9d9941a4a63c062158e0a630": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.4.0",
       "model_name": "DescriptionStyleModel",
@@ -81,164 +55,18 @@
        "description_width": ""
       }
      },
-     "1e3465e5050d486aa7fd4d8de9b78ae9": {
+     "a72770a4f541425f8fe85833a3dc2a8e": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.4.0",
       "model_name": "LabelModel",
       "state": {
        "context_menu": null,
-       "layout": "IPY_MODEL_2604883b6ad54ad9bf6dafa5f0b1ee06",
-       "style": "IPY_MODEL_11098546fcf14a4d94f5ddd297b3c1be",
+       "layout": "IPY_MODEL_dec20f599109458ca607b1df5959469b",
+       "style": "IPY_MODEL_8273e8fe9d9941a4a63c062158e0a630",
        "value": "Hello World"
       }
      },
-     "2604883b6ad54ad9bf6dafa5f0b1ee06": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "26db725aa0f943179e908dae2db91dcd": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "LabelModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_993566c9c6ae43f6b37be6186a6efbf1",
-       "style": "IPY_MODEL_7878452179924d46875a0097a80768c1",
-       "value": "Hello World"
-      }
-     },
-     "5070d678e14c4a608c622beac723691c": {
-      "buffers": [
-       {
-        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==",
-        "encoding": "base64",
-        "path": [
-         "value"
-        ]
-       }
-      ],
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "ImageModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_a74b72c024714b1eac261ac3a4e71dc5"
-      }
-     },
-     "52cb6eef85754c1c8a2c7989823a763e": {
-      "buffers": [
-       {
-        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==",
-        "encoding": "base64",
-        "path": [
-         "value"
-        ]
-       }
-      ],
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "ImageModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_ca375771aefa41cab7935c9b24594dee"
-      }
-     },
-     "6b7682af077b481bac11bcbe5e23da86": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "LabelModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_fb24c58ece224c3dae5fb61de93c9aeb",
-       "style": "IPY_MODEL_915a34ac1f224440bbe778240d320f74",
-       "value": "Hello World"
-      }
-     },
-     "7878452179924d46875a0097a80768c1": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "8b52129f910f46dd8c0b5a4e7b68dba0": {
-      "buffers": [
-       {
-        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==",
-        "encoding": "base64",
-        "path": [
-         "value"
-        ]
-       }
-      ],
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "ImageModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_db63c06429bc45e2bc4c1f0b1a791622"
-      }
-     },
-     "915a34ac1f224440bbe778240d320f74": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "993566c9c6ae43f6b37be6186a6efbf1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a6b9eb6dfcd748b3b3cf5e1360e8ac71": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a74b72c024714b1eac261ac3a4e71dc5": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ca375771aefa41cab7935c9b24594dee": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "d0f552c064be4b89b196baca1960a43d": {
-      "buffers": [
-       {
-        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==",
-        "encoding": "base64",
-        "path": [
-         "value"
-        ]
-       }
-      ],
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.4.0",
-      "model_name": "ImageModel",
-      "state": {
-       "context_menu": null,
-       "layout": "IPY_MODEL_a6b9eb6dfcd748b3b3cf5e1360e8ac71"
-      }
-     },
-     "db63c06429bc45e2bc4c1f0b1a791622": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.1.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "fb24c58ece224c3dae5fb61de93c9aeb": {
+     "dec20f599109458ca607b1df5959469b": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.1.0",
       "model_name": "LayoutModel",
